fixed spacing issue in header

--- a/src/components/header/Header.module.css
+++ b/src/components/header/Header.module.css
@@ -8,6 +8,19 @@
   align-items: center;
 }
 
+.headerSection {
+  flex: 1;
+  display: flex;
+}
+
+.headerSection:nth-of-type(even) {
+  justify-content: center;
+}
+
+.headerSection:last-of-type {
+  justify-content: flex-end;
+}
+
 .logo {
   width: 6rem;
 }
